	  deprecated and are now completely unused

	* src/Makefile_insert, src/desktop.cpp, src/desktop.h,
	  src/object-hierarchy.cpp, src/object-hierarchy.h, src/sp-object.cpp,
	  src/sp-object.h:

	  Implemented SPDesktop::setCurrentLayer(), introducing
	  Inkscape::ObjectHierarchy to permit falling back to parents if
	  the current layer is removed.

2004-06-26  MenTaLguY  <mental@rydia.net>

	* src/refcounted.h: allow reffing/unreffing const objects

	* src/arc-context.cpp, src/draw-context.cpp, src/dropper-context.cpp,
	  src/event-context.cpp, src/event-context.h, src/node-context.cpp,
	  src/rect-context.cpp, src/selcue.cpp, src/selcue.h,
	  src/select-context.cpp, src/select-context.h, src/seltrans.cpp,
	  src/seltrans.h, src/spiral-context.cpp, src/star-context.cpp,
	  src/text-context.cpp, src/zoom-context.cpp:

	  Make SPSelTrans and SPSelCue proper C++ classes with constructors.

	* src/document.h, src/dialogs/xml-tree.cpp: removed sp_document_lookup_id

	* src/sp-object.cpp: clarify what is happening with bug #980407 --
	  the clone is getting attached to the repr before the original SPObject
	  is.

2004-06-26  Carl Hetherington  <inkscape@carlh.net>

	* src/node-context.cpp: make sure nodepath->nodeContext is set up
	when the selection changes.  Fixes 936739.

2004-06-25  MenTaLguY  <mental@rydia.net>

	* src/display/sp-canvas.cpp: enabled win32 current item workaround on
  	  all platforms

2004-06-25  Kees Cook  <kees@outflux.net>

	* src/dialogs/rdf.h, src/dialogs/rdf.cpp, src/dialogs/Makefile_insert,
      src/dialogs/desktop-properties.cpp:

	  Added data entry widgets for document metadata, including a rough
	  license selector, and debug rdf generator.  Corrected whitespace,
	  added table for RDF entity lookup, tag, and title mapping.  Added
	  initial loading framework.  Cleaned up rdf_work_entity_t usage.

2004-06-25  Carl Hetherington  <inkscape@carlh.net>

	* src/sp-namedview.cpp: cleanups in grid snap settings.  Fix a
	typo.
